--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-@import "tailwindcss";
-@plugin "daisyui";
-
+/* hi */
 .flip-card {
   height: 18em;
   perspective: 1000px;
@@ -34,4 +32,7 @@
 .flip-card-back {
   transform: rotateY(180deg);
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+.this-is-none {
+  width: 1px;
 }
